@@ -136,7 +136,7 @@ skill_wall_check: yes
 // Note: When the skill does not checks for walls, you will always be considered
 //  as if you had a wall-next to you (you always get the wall-based speed). 
 //  Add the settings as required, being hit always uncloaks you.
-// 
+// Note: Options 2 and 4 affects to Cloacking Exceed too.
 // 0 = doesn't check for walls
 // 1 = Check for walls
 // 2 = Cloaking is not cancelled when attacking.
