@@ -929,81 +929,83 @@ SC_WYRD	360
 SC_HAGALAZ	361
 SC_ROLLINGCUTTER	362
 SC_CLOAKINGEXCEED	363
-SC_EPICLESIS	364
-SC_ORATIO	365
-SC_LAUDAAGNUS	366
-SC_LAUDARAMUS	367
-SC_RENOVATIO	368
-SC_EXPIATIO	369
-SC_DUPLELIGHT	370
-SC_SECRAMENT	371
-SC_WHITEIMPRISON	372
-SC_RECOGNIZEDSPELL	373
-SC_MARSHOFABYSS	374
-SC_STASIS	375
-SC_CHAINLIGHTNING	376
-SC_SPHERE_1	377
-SC_SPHERE_2	378
-SC_SPHERE_3	379
-SC_SPHERE_4	380
-SC_SPHERE_5	381
-SC_FREEZINGSPEL	382
-SC_FEARBREEZE	383
-SC_ELECTRICSHOCKER	384
-SC_BITE	385
-SC_WUGDASH	386
-SC_CAMOUFLAGE	387
-SC_ACCELERATION	388
-SC_HOVERING	389
-SC_INFRAREDSCAN	390
-SC_ANALYZE	391
-SC__ENERVATION	392
-SC__GROOMY	393
-SC__IGNORANCE	394
-SC__LAZINESS	395
-SC__UNLUCKY	396
-SC__WEAKNESS	397
-SC__REPRODUCE	398
-SC__AUTOSHADOWSPELL	399
-SC__SHADOWFORM	400
-SC__STRIPACCESSORY	401
-SC__BODYPAINT	402
-SC__INVISIBILITY	403
-SC__DEADLYINFECT	404
-SC__MANHOLE	405
-SC_CHAOS	406
-SC__BLOODYLUST	407
-SC__MAELSTROM	408
-SC_GN_CARTBOOST	409
-SC_BLOODSUCKER	410
-SC_THORNSTRAP	411
-SC_SMOKEPOWDER	412
-SC_TEARGAS	413
-SC_MANDRAGORA	414
-SC_SWINGDANCE	415
-SC_SYMPHONYOFLOVER	416
-SC_MOONLITSERENADE	417
-SC_RUSHWINDMILL	418
-SC_ECHOSONG	419
-SC_HARMONIZE	420
-SC_VOICEOFSIREN	421
-SC_DEEPSLEEP	422
-SC_SIRCLEOFNATURE	423
-SC_GLOOMYDAY	424
-SC_GLOOMYDAY_SK	425
-SC_SONGOFMANA	426
-SC_SATURDAYNIGHTFEVER	427
-SC_SITDOWN_FORCE	428
-SC_DANCEWITHWUG	429
-SC_LERADSDEW	430
-SC_MELODYOFSINK	431
-SC_BEYONDOFWARCRY	432
-SC_UNLIMITEDHUMMINGVOICE	433
-SC_FIREWALK	434
-SC_ELECTRICWALK	435
-SC_WARMER	436
-SC_STRIKING	437
-SC_CRYSTALIZE	438
+SC_WEAPONBLOCKING	364
+SC_WEAPONBLOCKING_POSTDELAY	365
+SC_EPICLESIS	366
+SC_ORATIO	367
+SC_LAUDAAGNUS	368
+SC_LAUDARAMUS	369
+SC_RENOVATIO	370
+SC_EXPIATIO	371
+SC_DUPLELIGHT	372
+SC_SECRAMENT	373
+SC_WHITEIMPRISON	374
+SC_RECOGNIZEDSPELL	375
+SC_MARSHOFABYSS	376
+SC_STASIS	377
+SC_CHAINLIGHTNING	378
+SC_SPHERE_1	379
+SC_SPHERE_2	380
+SC_SPHERE_3	381
+SC_SPHERE_4	382
+SC_SPHERE_5	383
+SC_FREEZINGSPEL	384
+SC_FEARBREEZE	385
+SC_ELECTRICSHOCKER	386
+SC_BITE	387
+SC_WUGDASH	388
+SC_CAMOUFLAGE	389
+SC_ACCELERATION	390
+SC_HOVERING	391
+SC_INFRAREDSCAN	392
+SC_ANALYZE	393
+SC__ENERVATION	394
+SC__GROOMY	395
+SC__IGNORANCE	396
+SC__LAZINESS	397
+SC__UNLUCKY	398
+SC__WEAKNESS	399
+SC__REPRODUCE	400
+SC__AUTOSHADOWSPELL	401
+SC__SHADOWFORM	402
+SC__STRIPACCESSORY	403
+SC__BODYPAINT	404
+SC__INVISIBILITY	405
+SC__DEADLYINFECT	406
+SC__MANHOLE	407
+SC_CHAOS	408
+SC__BLOODYLUST	409
+SC__MAELSTROM	410
+SC_GN_CARTBOOST	411
+SC_BLOODSUCKER	412
+SC_THORNSTRAP	413
+SC_SMOKEPOWDER	414
+SC_TEARGAS	415
+SC_MANDRAGORA	416
+SC_SWINGDANCE	417
+SC_SYMPHONYOFLOVER	418
+SC_MOONLITSERENADE	419
+SC_RUSHWINDMILL	420
+SC_ECHOSONG	421
+SC_HARMONIZE	422
+SC_VOICEOFSIREN	423
+SC_DEEPSLEEP	424
+SC_SIRCLEOFNATURE	425
+SC_GLOOMYDAY	426
+SC_GLOOMYDAY_SK	427
+SC_SONGOFMANA	428
+SC_SATURDAYNIGHTFEVER	429
+SC_SITDOWN_FORCE	430
+SC_DANCEWITHWUG	431
+SC_LERADSDEW	432
+SC_MELODYOFSINK	433
+SC_BEYONDOFWARCRY	434
+SC_UNLIMITEDHUMMINGVOICE	435
+SC_FIREWALK	436
+SC_ELECTRICWALK	437
+SC_WARMER	438
+SC_STRIKING	439
+SC_CRYSTALIZE	440
 
 e_gasp	0
 e_what	1
