@@ -809,9 +809,9 @@
 //2025,0,6,4,0,0x1,0,1,0,no,0,0,0,none,0,		GC_CREATENEWPOISON,Create New Poison
 //2026,9,6,16,0,0x1,0,1,1,yes,0,0,0,none,0,	GC_ANTIDOTE,Antidote
 //2027,0,6,4,0,0x1,0,5,1,no,0,0,0,weapon,0,	GC_POISONINGWEAPON,Poisoning Weapon
-//2028,0,6,4,0,0x1,0,5,1,yes,0,0,0,none,0,	GC_WEAPONBLOCKING,Weapon Blocking
-//2029,-2,6,4,-1,0x2,3,5,1,no,0,0x200,0,weapon,3,	GC_COUNTERSLASH,Counter Slash
-//2030,-2,6,4,-1,0x1,0,5,1,no,0,0x200,0,weapon,0,	GC_WEAPONCRUSH,Weapon Crush
+2028,0,6,4,0,0x1,0,5,1,yes,0,0,0,none,0,	GC_WEAPONBLOCKING,Weapon Blocking
+2029,-2,6,4,-1,0x2,3,5,1,no,0,0x200,0,weapon,3,	GC_COUNTERSLASH,Counter Slash
+2030,-2,6,4,-1,0x1,0,5,1,no,0,0x200,0,weapon,0,	GC_WEAPONCRUSH,Weapon Crush
 //2031,4,6,1,5,0x1,0,5,1,no,0,0,0,weapon,0,	GC_VENOMPRESSURE,Venom Pressure
 //2032,2,6,2,5,0x1,0,5,1,no,0,0,1,weapon,0,	GC_POISONSMOKE,Poison Smoke
 2033,0,6,4,0,0x1,0,5,1,no,0,0,0,weapon,0,	GC_CLOAKINGEXCEED,Cloaking Exceed
