@@ -421,6 +421,7 @@ void initChangeTables(void)
 	set_sc( RK_FIGHTINGSPIRIT    , SC_OTHILA          , SI_FIGHTINGSPIRIT     , SCB_WATK|SCB_ASPD );
 	set_sc( RK_ABUNDANCE         , SC_URUZ            , SI_ABUNDANCE          , SCB_NONE );
 
+	set_sc( GC_WEAPONBLOCKING    , SC_WEAPONBLOCKING  , SI_WEAPONBLOCKING     , SCB_NONE );
 	set_sc( GC_ROLLINGCUTTER     , SC_ROLLINGCUTTER   , SI_ROLLINGCUTTER      , SCB_NONE );
 	set_sc( GC_CLOAKINGEXCEED    , SC_CLOAKINGEXCEED  , SI_CLOAKINGEXCEED     , SCB_SPEED );
 
@@ -6498,12 +6499,16 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		case SC_THURISAZ:
 			val4 = tick / 1000;
 			break;
+		case SC_WEAPONBLOCKING:
+			val2 = 10 + 2 * val1; // Chance
+			val_flag |= 1|2;
+			break;
 		case SC_ROLLINGCUTTER:
 			val_flag |= 1;
 			break;
 		case SC_CLOAKINGEXCEED:
-			val2 = ( val1 + 1 ) / 2;
-			val3 = 90 + val1 * 10;
+			val2 = ( val1 + 1 ) / 2; // Hits
+			val3 = 90 + val1 * 10; // Walk speed
 			val_flag |= 1|2|4;			
 			if (bl->type == BL_PC)
 				val4 |= battle_config.pc_cloak_check_type&7;
@@ -8074,6 +8079,16 @@ int status_change_timer(int tid, unsigned int tick, int id, intptr data)
 				sc_timer_next(10000+tick, status_change_timer, bl->id, data);
 				return 0;
 			}
+		}
+		break;
+
+	case SC_WEAPONBLOCKING:
+		if( --(sce->val4) >= 0 )
+		{
+			if(!status_charge(bl,0,3))
+				break;
+			sc_timer_next(1000 + tick, status_change_timer, bl->id, data);
+			return 0;
 		}
 		break;
 
