@@ -336,6 +336,8 @@ typedef enum sc_type {
 	SC_HAGALAZ,
 	SC_ROLLINGCUTTER,
 	SC_CLOAKINGEXCEED,
+	SC_WEAPONBLOCKING,
+	SC_WEAPONBLOCKING_POSTDELAY,
 	SC_EPICLESIS,
 	SC_ORATIO,
 	SC_LAUDAAGNUS,
